maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:9: error: value avance is not a member of Unit
possible cause: maybe a semicolon is missing before `value avance'?
	} avance()
          ^